Update registration endpoint and schema with form UI changes
